// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform basic 1`] = `
"<template><div class=\\"markdown-body\\"><h1>Hello</h1>
<ul>
<li>A</li>
<li>B</li>
<li>C</li>
</ul>
</div></template>
<script setup>
const frontmatter = {\\"title\\":\\"Hey\\"}
defineExpose({ frontmatter })
</script>

"
`;

exports[`transform couldn't expose frontmatter 1`] = `
"<template><div class=\\"markdown-body\\">
</div></template>
<script setup>
const frontmatter = {\\"title\\":\\"Hey\\"}

defineExpose({ test: 'test'})

</script>

"
`;

exports[`transform exposes frontmatter 1`] = `
"<template><div class=\\"markdown-body\\"><h1>Hello</h1>
</div></template>
<script setup>
const frontmatter = {\\"title\\":\\"Hey\\"}
defineExpose({ frontmatter })
</script>

"
`;

exports[`transform script setup 1`] = `
"<template><div class=\\"markdown-body\\"><h1>Hello</h1>

</div></template>
<script setup>
const frontmatter = {}
defineExpose({ frontmatter })

import Foo from './Foo.vue'

</script>

"
`;

exports[`transform style 1`] = `
"<template><div class=\\"markdown-body\\"><h1>Hello</h1>

</div></template>
<script setup>
const frontmatter = {}
defineExpose({ frontmatter })
</script>
<style>h1 { color: red }</style>
"
`;
